Added Title and Credits, + centered the divs

--- a/birds.css
+++ b/birds.css
@@ -4,6 +4,12 @@
 
 /* path {fill:none;} */
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
 .graticule {
   fill: none;
   stroke: #777;
@@ -30,4 +36,20 @@
     -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
     pointer-events: none;
+}
+
+#creditsDiv {
+  background-image: linear-gradient(white, rgb(205, 231, 240));
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+.subtitle, .title {
+  padding-top: 10px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.normal_text {
+  text-align: center;
 }
