--- a/birds.css
+++ b/birds.css
@@ -53,3 +53,26 @@ body {
 .normal_text {
   text-align: center;
 }
+
+.final_text {
+  text-align: left;
+}
+
+.slice {
+  cursor: pointer;
+}
+
+.slice .main-arc {
+  stroke: #fff;
+  stroke-width: 1px;
+}
+
+.slice .hidden-arc {
+  fill: none;
+}
+
+.slice text {
+  pointer-events: none;
+  dominant-baseline: middle;
+  text-anchor: middle;
+}
